добавляет разметку к 7-му блоку

--- a/source/index.html
+++ b/source/index.html
@@ -573,6 +573,28 @@
               </p>
             </div>
           </div>
+          <div class="booking__wrapper-form">
+            <form class="booking__form form" action="https://echo.htmlacademy.ru" method="POST">
+              <p>Оставьте заявку и мы свяжемся с вами в ближайшее время</p>
+              <div class="form__field">
+                <label class="visually-hidden" for="name">Введите Ваше имя</label>
+                <input id="name" type="text" name="name" value="" placeholder="Валерия" required>
+              </div>
+              <div class="form__field">
+                <label class="visually-hidden" for="phone">Введите Ваш номер телефона</label>
+                <input id="phone" type="number" name="phone" value="" placeholder="89236889975" required>
+              </div>
+              <div class="form__field">
+                <label class="visually-hidden" for="e-mail">Введите Ваш e-mail</label>
+                <input id="e-mail" type="email" name="e-mail" value="" placeholder="grishaewa.lera@gmail.com" required>
+              </div>
+              <div class="form__field">
+                <input id="check" type="checkbox" name="check" value="" checked>
+                <label for="check">Я согласен на обработку моих персональных данных</label>
+              </div>
+              <button class="form__button button" type="submit">Оставить заявку</button>
+            </form>
+          </div>
         </div>
       </section>
 
