--- a/source/index.html
+++ b/source/index.html
@@ -673,7 +673,7 @@
                   <input class="visually-hidden form__checkbox" id="check" type="checkbox" name="check" value="" checked>
                   <label for="check">Я согласен на обработку моих персональных данных</label>
                 </div>
-                <button class="form__button" type="submit">Оставить заявку</button>
+                <button class="form__button" type="submit" aria-label="Оставить заявку">Оставить заявку</button>
               </form>
             </div>
           </div>
@@ -709,7 +709,7 @@
 
               <div class="contacts__phone">
                 <h3 class="visually-hidden">Телефон</h3>
-                <span>8-800-200-00-00</span>
+                <a href="tel:+88002000000"><span>8-800-200-00-00</span></a>
               </div>
             </div>
           </div>
