--- a/source/index.html
+++ b/source/index.html
@@ -77,16 +77,16 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
-              <li class="site-list__item">
+              <li class="site-list__item site-list__item--advantage">
                 <a class="site-list__link" href="#">Преимущества</a>
               </li>
-              <li class="site-list__item">
+              <li class="site-list__item site-list__item--direction">
                 <a class="site-list__link" href="#">Направления</a>
               </li>
-              <li class="site-list__item">
+              <li class="site-list__item site-list__item--cruises">
                 <a class="site-list__link" href="#">Ближайшие круизы</a>
               </li>
-              <li class="site-list__item">
+              <li class="site-list__item site-list__item--contacts">
                 <a class="site-list__link" href="#">Контакты</a>
               </li>
             </ul>
