Вносит правки (Ранее бронирование, checkbox)

--- a/source/index.html
+++ b/source/index.html
@@ -688,7 +688,7 @@
 
                   <div class="form__field form__field-check">
                     <input class="visually-hidden form__checkbox" id="check" type="checkbox" name="check" value="true" checked>
-                    <label for="check">Я согласен на обработку моих персональных данных</label>
+                    <label for="check">Я согласен на обработку моих&nbsp;персональных&nbsp;данных</label>
                   </div>
                   <button class="form__button" type="submit" aria-label="Оставить заявку">Оставить заявку</button>
                 </form>
